backend/src/tests/fixtures/photos/negative/photoMaxLength.fixture.ts
import * as utilFixture from '@/tests/fixtures/util.fixture';

export default {
  caption: utilFixture.chars301,
  equipment: {
    camera: utilFixture.chars51,
    lens: utilFixture.chars51,
  },
  location: utilFixture.chars101,
  settings: {
    aperture: utilFixture.chars8,
    focalLength: utilFixture.chars8,
    iso: utilFixture.chars8,
    shutterSpeed: utilFixture.chars8,
  },
  title: utilFixture.chars51,
};
